[gd_scene load_steps=15 format=3 uid="uid://d4cclygq1ukwn"]

[ext_resource type="Script" uid="uid://i3i6nipy34lf" path="res://scripts/main_menu.gd" id="1_bqqt6"]
[ext_resource type="FontFile" uid="uid://dmdpjdqofcct6" path="res://assets/fonts/GrapeSoda.ttf" id="2_bqqt6"]
[ext_resource type="Texture2D" uid="uid://56g5h4s3lins" path="res://assets/backgrounds/Screenshot from 2025-06-22 13-54-23.png" id="3_rtw2f"]
[ext_resource type="AudioStream" uid="uid://cmuawycgyf722" path="res://assets/music/Jammin Bread.mp3" id="4_wu84c"]
[ext_resource type="Script" uid="uid://dcpxvi0m3ekjv" path="res://scripts/audio_control.gd" id="5_8ln24"]
[ext_resource type="Script" uid="uid://b8s2qmxakr7gh" path="res://scripts/fullscreen_control.gd" id="6_rtw2f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wu84c"]
texture = ExtResource("3_rtw2f")
modulate_color = Color(0.336608, 0.336608, 0.336608, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ekxnf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.74978, 0.74978, 0.74978, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.227451)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(0.644663, 0.644663, 0.644663, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.227451)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.227451)
shadow_size = 5
shadow_offset = Vector2(0, 3.5)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_wu84c"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8ln24"]
color = Color(0.278689, 0.520262, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_rtw2f"]
color = Color(0.278689, 0.520262, 1, 1)
thickness = 6

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqqt6")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wu84c")
autoplay = true
bus = &"Music"

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wu84c")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.603
anchor_right = 0.5
anchor_bottom = 0.603
offset_left = -175.0
offset_top = -115.744
offset_right = 175.0
offset_bottom = 115.256
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="Start" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Start Game"

[node name="Options" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Options"

[node name="Exit" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.173
anchor_right = 0.5
anchor_bottom = 0.173
offset_left = -153.5
offset_top = -44.104
offset_right = 153.5
offset_bottom = 23.896
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("2_bqqt6")
theme_override_font_sizes/font_size = 104
text = "Godot Adventure"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.0
offset_top = -147.0
offset_right = 213.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.887
anchor_right = 0.5
anchor_bottom = 0.887
offset_left = -175.0
offset_top = -25.365
offset_right = 175.0
offset_bottom = 25.635
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_ekxnf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bqqt6")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Back"

[node name="OptionsTitle" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioControl" type="HSlider" parent="Options"]
layout_mode = 0
offset_left = 48.0
offset_top = 41.0
offset_right = 380.0
offset_bottom = 114.0
theme_override_styles/slider = SubResource("StyleBoxLine_wu84c")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_8ln24")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_rtw2f")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_8ln24")
audio_bus_name = "Music"

[node name="FullscreenControl" type="CheckButton" parent="Options"]
layout_mode = 0
offset_left = 80.0
offset_top = 113.0
offset_right = 361.0
offset_bottom = 176.0
text = "FullScreen"
script = ExtResource("6_rtw2f")

[connection signal="pressed" from="MainButtons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainButtons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_back_options_pressed"]
[connection signal="value_changed" from="Options/AudioControl" to="Options/AudioControl" method="_on_value_changed"]
[connection signal="toggled" from="Options/FullscreenControl" to="Options/FullscreenControl" method="_on_toggled"]
